# -nvision

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DETAILED_IMPLEMENTATION_PLAN.md  DEVELOPMENT_STRATEGY.md  Dockerfile  Makefile  PHASE1_COMPLETION_REPORT.md  PHASE2_RISK_MANAGEMENT.md  PHASE2_STEP_BY_STEP_GUIDE.md  PHASE2_TECHNICAL_SPECIFICATIONS.md  PHASE2_TEST_STRATEGY.md  README.md  api_dashboard.html  data_schema_and_transformation_proposal.md  diagnostic_test.py  docker-compose.yml  pyproject.toml  requirements.txt  run_tests.sh  setup_neo4j.sh
.github/workflows/: cd.yml  ci.yml
chroma_data/: chroma.sqlite3
data/: sample_customers.csv  sample_orders.csv  sample_products.csv  sample_reviews.csv  sample_suppliers.csv
docs/: data_ingestion_framework.md
scripts/: test_chroma_integration.py
src/api/: __init__.py  dependencies.py  exceptions.py  main.py  middleware.py
src/api/routers/: __init__.py  auth.py  health.py
src/api/routers/api_v1/: __init__.py
src/api/routers/api_v1/endpoints/: __init__.py  analytics.py  client_preferences.py  customers.py  products.py  reports.py  search.py  suggestions.py
src/auth/: __init__.py  auth_service.py  decorators.py  dependencies.py  jwt_handler.py  models.py  password_handler.py  permissions.py  security.py
src/config/: __init__.py  auth_config.py  database_config.py
src/core/: exceptions.py
src/data_models/: client_preferences_models.py  crm_models.py  ec_models.py  reporting_models.py  shared_models.py  suggestion_models.py
src/database/: __init__.py  chroma_client.py  init_auth_data.py
src/ingestion/: ingest_customers.py  ingest_orders.py  ingest_products.py  ingest_reviews.py  ingest_suppliers.py
src/models/: __init__.py  user_models.py
src/neo4j_setup/: crm_shared_schema.cypher  ec_schema.cypher
src/neo4j_utils/: connector.py
src/repositories/: __init__.py  base.py  client_preference_repository.py  crm_repository.py  customer_repository.py  order_repository.py  product_repository.py  suggestion_repository.py  user_repository.py  vector_repository.py
src/services/: __init__.py  analytics_service.py  client_preference_service.py  customer_service.py  effectiveness_reporting_service.py  embedding_service.py  order_service.py  product_service.py  recommendation_service.py  suggestion_service.py  user_service.py  vector_search_service.py
test_chroma_data/: chroma.sqlite3
tests/api/: test_analytics_endpoints.py  test_auth_endpoints.py  test_client_preferences_endpoints.py  test_reports_endpoints.py  test_suggestions_endpoints.py
tests/auth/: __init__.py
tests/data_models/: __init__.py  test_crm_models.py  test_ec_models.py  test_shared_models.py
tests/database/: __init__.py  test_chroma_client.py
tests/ingestion/: __init__.py  test_ingest_customers.py  test_ingest_orders.py  test_ingest_products.py  test_ingest_reviews.py  test_ingest_suppliers.py
tests/repositories/: test_client_preference_repository.py  test_suggestion_repository.py
tests/services/: test_client_preference_service.py  test_effectiveness_reporting_service.py  test_embedding_service.py  test_suggestion_service.py  test_vector_search_service.py
